# verifiers

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml  verifiers
agents/: stack-verifier.md  tdd-writer.md  ui-verifier.md
commands/: build-with-validation.md  tdd-update.md  tdd-write.md  tdd.md  verify.md
docs/: AUDITS.md  CONFIGURATION.md  VERIFIERS-CATALOG.md  VERIFIERS-CATEGORIES.md
hooks/: router.py  run_single.py  security_hook.py  stop_validator.py
lib/: __init__.py  circuit_breaker.py  codegen_staleness.py  config_loader.py  exclusion.py  feedback_tracker.py  file_index.py  hash_cache.py  json_logger.py  metrics.py  parallel_runner.py  per_file_cache.py  project_context.py  router_cache.py  secret_regexes.py  subprocess_cache.py  tier_cache.py  validator_registry.py  validators_core.py  workflow_loader.py
scripts/: benchmark_stop.py  benchmark_stop_real.py  merge_settings.py  perf_audit.py  sync_inline_deps.py  unmerge_settings.py  validator_metrics.py
tests/: conftest.py  test_actions_permissions_block.py  test_actions_sha_pin.py  test_adr_template_compliance.py  test_ai_cheating_guard.py  test_base.py  test_buf_governance.py  test_ci_image_scanning.py  test_codegen_staleness.py  test_commit_discipline.py  test_commitlint_gate.py  test_complexity_guard.py  test_config_loader.py  test_config_threshold_integration.py  test_connect_handler.py  test_dependabot_config.py  test_dependency_guard.py  test_disabled_groups.py  test_dispatch_index.py  test_docker_compose.py  test_docker_prod_deploy.py  test_env_config.py  (+64 more)
(+168 files in other folders)
