[project]
name = "verifiers"
version = "0.2.0"
description = "Reusable verifier system for AI agent coding workflows"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120
